--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
-    "cypress": "^13.4.0"
+    "cypress": "^13.4.0",
+    "cypress-mochawesome-reporter": "^3.6.1"
   }
 }
