--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -2,6 +2,8 @@ name: Generate Cypress Report
 
 on:
   push:
+    branches:
+        - main
 jobs:
   cypress-e2e-electron:
     name: Run on Electron
@@ -27,3 +29,4 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          publish_branch: gh-pages
