--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -12,21 +12,37 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
+      - name: Cypress run
+        uses: cypress-io/github-action@v4
         with:
-          node-version: '18'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Cypress tests
-        run: npm run cypress:run
-        
+          command: npm run cypress:run
+      - name: Uploading artifact
+        uses: actions/upload-artifact@v2
+        if: always()
+        with:
+          name: cypress-execution-report
+          path: cypress/reports/html
       - name: Deploy report page
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: cypress/reports/html
-          publish_branch: gh-pages
+          publish_dir: ./public
+          publish_branch: gh-pages   
+      
+      # - name: Set up Node.js
+      #   uses: actions/setup-node@v2
+      #   with:
+      #     node-version: '18'
+
+      # - name: Install dependencies
+      #   run: npm ci
+
+      # - name: Run Cypress tests
+      #   run: npm run cypress:run
+        
+      # - name: Deploy report page
+      #   uses: peaceiris/actions-gh-pages@v3
+      #   with:
+      #     github_token: ${{ secrets.GITHUB_TOKEN }}
+      #     publish_dir: cypress/reports/html
+      #     publish_branch: gh-pages
