--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -1,33 +1,69 @@
-name: Generate Cypress Report
+name: Generate and Deploy Cypress Report
 
 on:
   push:
     branches:
-        - main
+      - main
+
 jobs:
-  cypress-e2e-electron:
-    name: Run on Electron
+  cypress:
+    name: Run Cypress Tests and Deploy Report
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v2
         with:
-          command: npm run cypress:run
-      - name: Uploading artifact
-        uses: actions/upload-artifact@v2
-        if: always()
-        with:
-          name: cypress-execution-report
-          path: cypress/reports/html
-      - name: Deploy report page
+          node-version: '14'
+
+      - name: Install Cypress and other dependencies
+        run: |
+          npm ci
+          npm install -g mochawesome
+
+      - name: Run Cypress tests and generate report
+        run: |
+          npm run cypress:run
+          npx marge --reportDir cypress/reports/mocha
+
+      - name: Deploy report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./public
-          publish_branch: gh-pages   
+          publish_dir: mochawesome-report
+# name: Generate Cypress Report
+
+# on:
+#   push:
+#     branches:
+#         - main
+# jobs:
+#   cypress-e2e-electron:
+#     name: Run on Electron
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v2
+#       - name: Cypress run
+#         uses: cypress-io/github-action@v4
+#         with:
+#           command: npm run cypress:run
+#       - name: Uploading artifact
+#         uses: actions/upload-artifact@v2
+#         if: always()
+#         with:
+#           name: cypress-execution-report
+#           path: cypress/reports/html
+#       - name: Deploy report page
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#           github_token: ${{ secrets.GITHUB_TOKEN }}
+#           publish_dir: ./public
+#           publish_branch: gh-pages   
       
       # - name: Set up Node.js
       #   uses: actions/setup-node@v2
