--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -12,7 +12,7 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
       # - name: Set up Node.js
       #   uses: actions/setup-node@v2
@@ -28,6 +28,7 @@ jobs:
         run: |
           npm run cypress:run
           npx marge --reportDir cypress/reports/mocha
+        continue-on-error: true
 
       - name: Deploy report to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
