--- a/.github/workflows/cypress-report.yml
+++ b/.github/workflows/cypress-report.yml
@@ -1,4 +1,4 @@
-name: Generate Cypress Report
+name: Create Cypress report
 
 on:
   push:
@@ -11,22 +11,91 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+      - name: Install Dependencies
+        run: |
+          npm ci
+          $(npm bin)/cypress cache path
+          $(npm bin)/cypress cache list
+          $(npm bin)/cypress verify
 
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Cypress tests
+      - name: Run Cypress Tests
         run: npm run cypress:run
-        
-      - name: Deploy report page
+        continue-on-error: true
+
+      - name: Copy Test Execution Videos
+        run: |
+          mkdir public
+          cp -r cypress/videos public/videos
+
+      - name: Merge Test Results
+        run: npm run report:merge
+
+      - name: Generate HTML Report
+        run: npm run report:generate
+
+      - name: Deploy Report Page
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          user_name: 'github-actions[bot]'
+          user_email: 'github-actions[bot]@users.noreply.github.com'
+# name: Generate Cypress Report
+
+# on:
+#   push:
+#     branches:
+#       - 'master'
+
+# jobs:
+#   cypress-e2e-electron:
+#     name: Run on Electron
+#     runs-on: ubuntu-latest
+
+#     steps:
+#       - uses: actions/checkout@v2
+    
+#       - name: Install a project with a clean slate
+#         run: |
+#             npm ci
+#             $(npm bin)/cypress cache path
+#             $(npm bin)/cypress cache list
+#             $(npm bin)/cypress verify
+#       - name: Run Cypress tests
+#         run: npm run cypress:run
+#         continue-on-error: true
+
+#       - name: Copy test execution videos
+#         run: |
+#             mkdir public
+#             cp -r cypress/videos public/videos
+
+#       - name: Merge test results into one
+#         run: npm run report:merge
+
+#       - name: Generate HTML report
+#         run: npm run report:generate
+
+#       - name: Deploy report page
+#         uses: peaceiris/actions-gh-pages@v3
+#         with:
+#             github_token: ${{ secrets.GITHUB_TOKEN }}
+#             publish_dir: ./public
+#             user_name: 'github-actions[bot]'
+#             user_email: 'github-actions[bot]@users.noreply.github.com'
+    # -
+
+    #   - name: Install dependencies
+    #     run: npm ci
+
+    #   - name: Run Cypress tests
+    #     run: npm run cypress:run
+        
+    #   - name: Deploy report page
+    #     uses: peaceiris/actions-gh-pages@v3
+    #     with:
+    #       github_token: ${{ secrets.GITHUB_TOKEN }}
+    #       publish_dir: ./public
