--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "cypress": "^13.4.0",
+    "mochawesome-merge": "^4.3.0",
     "open-cli": "^7.2.0"
   },
   "dependencies": {
